--- a/1장 시작하기.md
+++ b/1장 시작하기.md
@@ -8,11 +8,11 @@
  1-1. 도메인 전문가와 개발자
   - 개발자가 도메인 전문가와 직접 소통할수록 요구사항이 변질될 가능성이 줄지만 도메인 전문가라고 해서 항상 올바른 요구사항을 주는 것은 아니다. 
   > ex) 설문조사를 할 수 있는 기능이있다고 가정. 담담자는 매일 오전에 등록된 설문을 보고 승인하거나 반려하는 운영 업무를 진행한다. 설문등록 건수가 늘면서 
-  > "현재 목록에 있는 전체 설문을 한번에 선택하고 반려하는 기능" 필요 요청. 
+  >> "현재 목록에 있는 전체 설문을 한번에 선택하고 반려하는 기능" 필요 요청. 
   > 가볍게 처리할 수 있는 기능이지만 개발자는 요구사항의 의도가 궁금하여 문의
-  > 담장자 왈 : 1주일 지난 설문은 반려처리를 하는데 최근에 등록 건수가 늘면서 반려처리(수동)하는 시간이 늘었음. 그래서 목룍화면에서 일괄로 선택해서 반려하는 기능이 있으면 좋겠다. 
+  >> 담장자 왈 : 1주일 지난 설문은 반려처리를 하는데 최근에 등록 건수가 늘면서 반려처리(수동)하는 시간이 늘었음. 그래서 목룍화면에서 일괄로 선택해서 반려하는 기능이 있으면 좋겠다. 
   > 개발자 왈 : 그거보다는 1주일이 지난 설문중 승인하지 않은 설문을 자동으로 반려하는 기능은 어떤지 ?
-  > 담담자 왈 : 그러면 더욱 좋음. 
+  >> 담담자 왈 : 그러면 더욱 좋음. 
   
   - 위 예시처럼 전문가의 요구사항이 항상 올바른 것도 항상 효율적인 것도 아니다. 그래서 개발자는 그들이 실제로 원하는것이 무엇인지 생각하고 대화를 통해 진짜로 원하는 것을 찾아야 한다.
 
