--- a/1장 시작하기.md
+++ b/1장 시작하기.md
@@ -35,7 +35,7 @@
   + 도메인과 관련된 중요 업무 규칙을 도메인 모델에서 구현해야한다. 
   -> 핵심 규칙을 구현한 코드는 도메인 모델에만 위치하기 때문ㄴ에 규칙이 바뀌거나 규칙을 확장해야 할 때 다른 코드에 영향을 덜 주고 변경 내역을 모델에 반영할 수 있게 된다.
  
- - OrderState 위치
+ ### OrderState 위치
  ```java
  public class Order {
   private OrderStarte state;
@@ -69,7 +69,7 @@
   }
  ```
  
- Order 위치
+### Order 위치
  
  ```java
  public class Order {
