--- a/1장 시작하기 1-0 ~ 1-4.md
+++ b/1장 시작하기 1-0 ~ 1-4.md
@@ -32,7 +32,7 @@
   3) 도메인 : 시스템이 제공할 도메인 규칙을 구현한다. 
   4) 인프라스트럭쳐(Infrastructure) : DataBase나 Messaging System과 같은 외부 시스템과의 연동을 처리한다. 
   
-  + 도메인과 관련된 중요 업무 규칙을 도메인 모델에서 구현해야한다. 
+  #### 도메인과 관련된 중요 업무 규칙을 도메인 모델에서 구현해야한다. 
   -> 핵심 규칙을 구현한 코드는 도메인 모델에만 위치하기 때문ㄴ에 규칙이 바뀌거나 규칙을 확장해야 할 때 다른 코드에 영향을 덜 주고 변경 내역을 모델에 반영할 수 있게 된다.
  
  ### OrderState 위치
