--- a/1장 시작하기/1-6 ~ .md
+++ b/1장 시작하기/1-6 ~ .md
@@ -1,3 +1,61 @@
 # 엔티티와 밸류
 
 엔티티의 가장 큰 특징은 식별자를 가진다는 것.
+
+###1. 엔티티 밸류타입
+- 엔티티의 밸류타입은 꼭 두 개 이상의 데이터를 가져야 하는 것은 아니다. 
+  -> 의미를 명확하게 표현하기 위해 밸류 타입을 사용하는 경우도 있다. 
+  
+  OrderLine.class
+```java
+public class OrderLine{
+  private Product product;
+  private int price;
+  private int amount;
+  private int quantity;
+}
+price 와 amount는 int 타입의 숫자를 사용하고 있지만 이들은 '돈'을 의미하는 값이다. 따라서 '돈'을 의미하는 Money타입을 만들어 사용하면 코드를 이해하는데 도움이 된다.
+
+public class OrderLine{
+  private Product product;
+  private Money price;
+  private int amount;
+  private Money quantity;
+  
+  ...
+}
+
+public class Money{
+  private int value;
+  
+  public Money(int value){
+    this.value = value;
+  }
+}
+  
+```
+- 밸류타입의 또 다른 장점은 타입을 위한 기능을 추가할 수 있다는 점이다.
+
+```java
+
+public class Money{
+  private int value;
+  
+  public Money(int value){
+    this.value = value;
+  }
+  
+  //기능 추가
+  public Money add(Money money){
+    return new Money(this.value + money.value);
+  }
+  
+  public Money multiply(int multiplier){
+    return new Money(this * multiplier);
+  }
+}
+```
+- 이렇듯 Money를 사용하는 코드는 정수 타입 연산이 아니라 '돈' 계산이라는 의미로 코드를 작성할 수 있다.
+- 밸류객체의 데이터를 변경할 때는 기존 데이터를 변경하기보다는 변경한 데이터를 갖는 새로운 밸류 객체를 생성하는 방식을 선호한다.
+> 불변객체로 구현하는 이유는 여러가지가 있지만 안전한 코드를 작성할 수 있다는 것이 가장 중요한 포인트이다.
+
