--- a/1장 시작하기/1-7.md
+++ b/1장 시작하기/1-7.md
@@ -1,1 +1,37 @@
 # 도메인 용어와 유비쿼터스 언어
+
+- 코드를 작성할 때 도메인에서 사용하는 코드는 중요하다. 도메인에서 사용하는 용어를 코드에 반영하지 않으면 그 코드는 개발자에게 코드의 의미를 해석해야하는 부담을 주기 때문이다. 
+
+OrderState를 다음과 같이 구현했다고 가정하자.
+```java
+public enum OrderState{
+  STEP1,STEP2,STEP3,STEP4,STEP5,STEP6
+}
+```
+- 실 주문 상태는 '결제 대기중','상품준비중', '출고 완료됨', '배송중', '배송 완료' '주문 취소'인데 코드는 전체 상태를 6단계로 보고 코드를 표현한것. 
+- 문제는 이 다음 Order 클래스 코드를 작성 할때이다. 
+```java
+public class Order{
+  public void changeShippingInfo(ShippingInfo newShippingInfo){
+    veritifyStep1OrStep2();
+    setShippingInfo(newShippingInfo);
+  }
+  
+  private void veritifyStep1OrStep2(){
+    if(state != OrderState.STEP1 && state != OrderState.STEP2){
+      throw new IllealStateException("aleady shipped");
+    }
+  }
+}
+```
+- 배송지 변경은 '출고 전'에 가능한데 이코드는 veritifyStep1OrStep2()라는 이름으로 도메인 규칙이 드러나지 않게된다. 
+  의미를 이해하기 위해서 STEP1, STEP2, ... 가 각각 무엇을 의미하는지 알아야하며 기획자가 말하는 의미(출고전)와 개발자가 생각하는 의미(STEP1과 STEP2의 전)가 같음에도 불구하고
+  개발자는 따로 '해석'해서 들어야하는 문제가 생기게 된다. 
+
+```java
+public enum OrderState{
+  PAYMENT_WAITING, PREPARING, SHIPPED, DELIVERING, COMPLETED, CANCEL
+}
+```
+- 이리하여 기획자와 개발자가 대화할때 개발자는 변환과정을 거치지 않고 들을수 있게되며 명확한 의미를 가지게 되었다. 
+
