--- a/1장 시작하기/1-7.md
+++ b/1장 시작하기/1-7.md
@@ -35,3 +35,6 @@ public enum OrderState{
 ```
 - 이리하여 기획자와 개발자가 대화할때 개발자는 변환과정을 거치지 않고 들을수 있게되며 명확한 의미를 가지게 되었다. 
 
+> 에릭 에반스는 도메인 주도 설계에서 언어의 중요함을 강조하기 위해 유비쿼터스 언어라는 용어를 사용했다. 전문가, 관계자, 개발자가 도메인과 관련된 공통의 언어를 만들고
+> 대화,문서,도메인 모델, 코드, 테스트 등 모든곳에서 같은 용어를 사용한다. 이렇게 하면 소통 과정에서 발생하는 용어의 모호함을 줄일 수 있고 개발자는 도메인과 코드사이에서 불필요한
+> 해석과정을 줄일 수 있다.
