--- a/2 장 아키텍쳐 개요/2-0.md
+++ b/2 장 아키텍쳐 개요/2-0.md
@@ -9,7 +9,7 @@
 
 ### 2. 응용 영역 - 응용 영역은 기능을 구현하기 위해 도메인 영역의 도메인 모델을 사용한다. 주문 취소 기능을 제공하는 응용 서비스를 예로 살펴보면 다음 코드와 같이 도메인 모델을 사용해서 기능을 구현한다.
 
-'''java 
+```java 
 public class CancelOrderService{
   @Transactional
   public void cancelOrder(String orderId){
@@ -18,7 +18,7 @@ public class CancelOrderService{
     order.cancel();
   }
 }
-'''
+```
 **응용 서비스는 로직을 직접 수행하기보다는 도메인 모델에 로직 수행을 위임한다.**
 위 코드도 주문 취소 로직을 직접 구현하지않고 Order 객체에 취소처리를 위임하고 있다.
 
