--- a/2 장 아키텍쳐 개요/2-0.md
+++ b/2 장 아키텍쳐 개요/2-0.md
@@ -34,5 +34,5 @@ public class CancelOrderService{
 
 
 
-***도메인 영역, 응용 영역, 표현 영역은 구현 기술을 사용한 코드를 직접 만들지 않는다. 대신 인프라스트럭쳐 영역에서 제공하는 기능을 사용해서 필요한 기능을 개발한다. 예를 들어 응용 영역에서 DB에 보관된 데이터가 필요하면 인프라스트럭처 영역의 DB 모듈을 사용하여 데이터를 읽어온다. 비슷하게 외부에 메일을 발송해야 한다면 인프라스트럭처가 제공하는 SMTP 연동 모듈을 이용해서 메일을 발송한다. 
+***도메인 영역, 응용 영역, 표현 영역은 구현 기술을 사용한 코드를 직접 만들지 않는다. 대신 인프라스트럭쳐 영역에서 제공하는 기능을 사용해서 필요한 기능을 개발한다. 예를 들어 응용 영역에서 DB에 보관된 데이터가 필요하면 인프라스트럭처 영역의 DB 모듈을 사용하여 데이터를 읽어온다. 비슷하게 외부에 메일을 발송해야 한다면 인프라스트럭처가 제공하는 SMTP 연동 모듈을 이용해서 메일을 발송한다.*** 
  
