--- a/2 장 아키텍쳐 개요/2-2.md
+++ b/2 장 아키텍쳐 개요/2-2.md
@@ -7,3 +7,75 @@
 - 계층 구조를 엄격하게 적용한다면 바로 상위 계층은 바로 아래 계층에만 의존을 가져야 하지만 구현의 편리함을 위해 계층 구조를 유연하게 적용하기도 한다. 
 > 예를 들어 응용 계층은 바로 아래 계층인 도메인 계층에 의존하지만 외부 시스템과의 연동을 위해 더 아래 계층인 인프라스트럭처 계층에 의존하기도 한다. 
 
+- 응용 영역과 도메인 영역은 DB나 외부 시스템 연동을 위해 인프라스트럭처의 기능을 사용하므로 이런 계층 구조를 사용하는 것은 직관적으로 이해하기 쉽다. 하지만 짚고 넘어가야 할 것이 있다. 
+바로 **표현, 응용, 도메인 계층이 상세한 구현 기술을 다루는 인프라스트럭처 계층에 종속된다는 점이다.** 
+> 도메인의 가격 계산 규칙을 예로 들어 보자. 다음 코드는 할인 금액을 계산하기 위해 Drools라는 룰 엔진을 사용해서 계산 로직을 수행하는 인프라스트럭처 영역의 코드를 만들어 본 것이다. evalutate() 메서드에 값을 주면 별도 파일로 작성한 규칙을 이용해서 연산을 수행하는 코드이다. 
+
+```java
+
+public class DroolsRuleEngine {
+  
+  private KieContrainer kContainer;
+  
+  public DroolsRuleEngine(){
+    KieServices ks = KieServices.Factory.get();
+    kContainer = ks.getKieClasspathContainer();
+  }
+  
+  public void evalute(String sessionName, List<?> facts){
+    kieSession kSession = kContainer.newKieSession(sessionName);
+    
+    try{
+      facts.forEach(x -> kSession.insert(x));
+      kSession.fireAllRules();
+      
+    }finally{
+      kSession.dispose();
+    }
+  }
+}
+```
+- 응용 영역은 가격 계산을 위해 인프라스트럭쳐 영역의 DroolsRuleEngine을 사용한다.
+
+```java
+public class CalculateDiscountService{
+  private DroolsRuleEngine ruleEngine;
+  
+  public CalculateDiscountService(){
+    ruleEngine = new DroolsRuleEngine();
+  }
+}
+
+  public Money calculateDiscount(List<OrderLine> orderLines, String customerId){
+    customer customer = findCustomer(customerId);
+    
+    MutableMoney money = new MutableMoney(0);
+    List<?> facts = Arrays.asList(customer, money);
+    facts.addAll(orderLines);
+    ruleEngine.evalute("discountCalulation", facts);
+    return money.toImmutableMoney();
+  }
+```
+CalculateDiscountService가 동작은 하겠지만 이 코드는 두 가지 문제를 안고 있다. 
+- 첫 번째 문제는 CalculateDiscountService만 테스트 하기 어렵다는 것이다. CalculateDiscountService를 테스트 하려면 RuleEngine이 완벽하게 동작해야 한다. RuleEngine 클래스와 관련 설정 파일을 모두 만든 이후에 비로소 CalculateDiscountService가 올바르게 동작하는지 확인 가능하다. 
+- 두 번째 문제는 구현방식을 변경하기 어렵다는 점이다. 
+
+```java
+public class CalculateDiscountService{
+
+  '''
+  
+   public Money calculateDiscount(List<OrderLine> orderLines, String customerId){
+    customer customer = findCustomer(customerId);
+    
+    MutableMoney money = new MutableMoney(0); -> **Drools에 특화된 코드 연산결과를 받기 위해 추가한 타입
+    
+    List<?> facts = Arrays.asList(customer, money); 
+    facts.addAll(orderLines);                 -> Drools에 특화된 코드 룰에 필요한 데이터
+    
+    ruleEngine.evalute("discountCalulation", facts);
+    return money.toImmutableMoney();          -> Drolls에 특화된 코드 Drools의 세션 이름
+  }
+}
+```
+코드만 보면 Drools가 제공하는 타입을 직접 사용하지 않으므로 CalculateDiscountService가 Drools에 의존하지 않는다고 생각할 수 있지만 'discountCalculation'문자열을 Drools의 세션 이름을 의미 하므로 Drools의 세션 이름을 변경하면 CalculateDiscountService의 코드도 함께 변경해야한다. MutableMoney는 룰 적용 결과값을 보관하기 위해 추가한 타입인데 다른 방식을 사용했다면 필요 없는 타입이다. 
