--- a/2 장 아키텍쳐 개요/2-2.md
+++ b/2 장 아키텍쳐 개요/2-2.md
@@ -68,7 +68,7 @@ public class CalculateDiscountService{
    public Money calculateDiscount(List<OrderLine> orderLines, String customerId){
     customer customer = findCustomer(customerId);
     
-    MutableMoney money = new MutableMoney(0); -> **Drools에 특화된 코드 연산결과를 받기 위해 추가한 타입
+    MutableMoney money = new MutableMoney(0); -> Drools에 특화된 코드 연산결과를 받기 위해 추가한 타입
     
     List<?> facts = Arrays.asList(customer, money); 
     facts.addAll(orderLines);                 -> Drools에 특화된 코드 룰에 필요한 데이터
@@ -79,3 +79,8 @@ public class CalculateDiscountService{
 }
 ```
 코드만 보면 Drools가 제공하는 타입을 직접 사용하지 않으므로 CalculateDiscountService가 Drools에 의존하지 않는다고 생각할 수 있지만 'discountCalculation'문자열을 Drools의 세션 이름을 의미 하므로 Drools의 세션 이름을 변경하면 CalculateDiscountService의 코드도 함께 변경해야한다. MutableMoney는 룰 적용 결과값을 보관하기 위해 추가한 타입인데 다른 방식을 사용했다면 필요 없는 타입이다. 
+
+***이처럼 CalcuateDiscountService가 겉으로는 인프라스트럭처의 기술에 직접적인 의존을 하지 않는 것처럼 보여도 Drools라는 인프라스트럭처 영역의 기술에 완전하게 의존하고 있다. 이런 상황에서 Drools가 아닌 다른 구현 기술을 사용하려면 코드의 많은 부분을 고쳐야한다.*** OCP위반 )
+
+> 답은 DIP(추상화에 의존하고, 구체화에 의존하지 않는다.) 에있다.
+> 답은 DIP(추상화에 의존하고, 구체화에 의존하지 않는다.) 에 
