--- a/2 장 아키텍쳐 개요/2-3.md
+++ b/2 장 아키텍쳐 개요/2-3.md
@@ -1,1 +1,8 @@
 # DIP
+
+## 인프라스트럭처에 의존하면 '테스트 어려움'과 '기능 확장의 어려움' 두 가지 문제가 대두된다.
+
+1. 저수준 모듈을 고수준 모듈에 의존하도록 바꾼다.
+
+  - CalculateDiscountService는 고수준 모듈이다. 의미 있는 단일 기능을 제공하는 모듈로 '가격 할인 계산'이라는 기능을 구현한다. *해달 클래스는 후술 예정
+    1. 가격할인 계산 기능을 
