--- a/2 장 아키텍쳐 개요/2-3.md
+++ b/2 장 아키텍쳐 개요/2-3.md
@@ -4,5 +4,8 @@
 
 1. 저수준 모듈을 고수준 모듈에 의존하도록 바꾼다.
 
-  - CalculateDiscountService는 고수준 모듈이다. 의미 있는 단일 기능을 제공하는 모듈로 '가격 할인 계산'이라는 기능을 구현한다. *해달 클래스는 후술 예정
-    1. 가격할인 계산 기능을 
+  - CalculateDiscountService는 고수준 모듈이다. 의미 있는 단일 기능을 제공하는 모듈로 '가격 할인 계산'이라는 기능을 구현한다. *해달 클래스는 후술 예정*
+    1. 가격할인 계산 기능을 구현하려면 하위기능이 필요하다. 
+      - 고객 정보를 구해야 할것
+      - 할인 금액 룰(Drools)을 실행해야 할것
+>> 하지만 문제는 
