--- a/2 장 아키텍쳐 개요/2-3.md
+++ b/2 장 아키텍쳐 개요/2-3.md
@@ -8,4 +8,8 @@
     1. 가격할인 계산 기능을 구현하려면 하위기능이 필요하다. 
       - 고객 정보를 구해야 할것
       - 할인 금액 룰(Drools)을 실행해야 할것
->> 하지만 문제는 
+> 하지만 문제는 고수준 모듈이 저수준 모듈을 사용하면 계층 구조 아키텍처에서 구현 변경과 테스트가 어렵다는 문제가 발생한다. 
+
+2. 추상화한 인터페이스를 사용하여 '두 가지'문제를 해결
+
+
