--- a/2 장 아키텍쳐 개요/2-3.md
+++ b/2 장 아키텍쳐 개요/2-3.md
@@ -11,5 +11,30 @@
 > 하지만 문제는 고수준 모듈이 저수준 모듈을 사용하면 계층 구조 아키텍처에서 구현 변경과 테스트가 어렵다는 문제가 발생한다. 
 
 2. 추상화한 인터페이스를 사용하여 '두 가지'문제를 해결
+  
+  > 고객 정보와 구매정보에 룰을 적용해서 할인 금액을 구한다 라는것을 추상화한 인터페이스
+  ```java
+  public interface RuleDiscounter{
+    Money applyRules(Customer customer, List<OrderLine> orderLines);
+  }
+  ```
+  
+  > CalculateDiscountService가 RuleDiscounter를 이용하도록 바꾸기
+  ```java
+  public class CalculateDiscountService{
+    private RuleDiscounter ruleDiscounter;
+    
+    public CalculateDiscountService(RuleDiscounter ruleDiscounter){
+      this.ruleDiscounter = ruleDiscounter;
+    }
+    
+    public Money calculateDiscount(List<OrderLine> orderLines, String customerId){
+      customer customer = findCustomer(customerId);
+      return ruleDiscounter.applyRules(customer, orderLines);
+    }
+  }
+  ```
+  - CalculateDiscountService에는 단지 RuleDiscounter가 룰을 적용한다는 사실만 알뿐 실제 RuleDiscounter의 구현 객체는 생성자를 통해서 전달받는다. 
+  - 
 
 
