--- a/2 장 아키텍쳐 개요/2-3.md
+++ b/2 장 아키텍쳐 개요/2-3.md
@@ -35,6 +35,26 @@
   }
   ```
   - CalculateDiscountService에는 단지 RuleDiscounter가 룰을 적용한다는 사실만 알뿐 실제 RuleDiscounter의 구현 객체는 생성자를 통해서 전달받는다. 
-  - 
+  > CalculateDiscountService는 더 이상 구현 기술인 Drools에 의존하지 않는다. '룰을 이용한 할인 금액 계산'을 추상화한 RuleDiscounter인터페이스에 의존할 뿐이다.
+
+*CalculateDiscountService는 RuleDiscounter를 의존 -> 고수준 모듈*
+*DroolsRuleDiscounter는 고수준 모듈을 구현한 하위기능 이기 때문에 저수준 모듈* 
+
+- 고수준 모듈은 더 이상 저수준 모듈에 의존하지 않고 구현을 추상화한 인터페이스에 의존한다. 
+```java
+  //사용할 저수준 객체 생성
+  RuleDiscounter ruleDiscounter = new DroolsRuleDiscounter();
+  
+  //생성자 주입
+  CalculateDiscountService disService = new CalculateDiscountService(ruleDiscounter);
+```
+> 이제 구현 기술을 변경하더라도 CalculateDiscountService를 수정할 필요가 없다. 
+```java
+  RuleDiscounter ruleDiscounter = new SimpleRuleDiscounter();
+  
+  CalculateDiscountService disService = new CalculateDiscountService(ruleDiscounter);
+```
+
+이를 DIP 의존 역전 원칙 이라고 부른다. 
 
 
