--- a/2 장 아키텍쳐 개요/2-3_1.md
+++ b/2 장 아키텍쳐 개요/2-3_1.md
@@ -3,7 +3,7 @@
 CalculateDiscountService가 잘 동작 되는지 확인하려면 CustomerRepository와 RuleDiscounter를 구현한 객체가 필요하다. 
 이는 CustomerRepository와 RuleDiscounter가 인터페이스이기에 대역 객체를 사용해서 테스트를 쉽게 진행할 수 있다.
 
-- 대역 객체를 사용해서 Customer가 존재하지 않는 경우 이셉션이 발생하는지 검증하는 테스트 코드
+- 대역 객체를 사용해서 Customer가 존재하지 않는 경우 이셉션이 발생하는지 검증하는 테스트 코드.
 
 CalculateDiscountService
 ```java
