--- a/2 장 아키텍쳐 개요/2-3_1.md
+++ b/2 장 아키텍쳐 개요/2-3_1.md
@@ -5,7 +5,7 @@ CalculateDiscountService가 잘 동작 되는지 확인하려면 CustomerReposit
 
 - 대역 객체를 사용해서 Customer가 존재하지 않는 경우 이셉션이 발생하는지 검증하는 테스트 코드.
 
-CalculateDiscountService
+> CalculateDiscountService
 ```java
   public class CalculateDiscountService{
     private CustomerRepository customerRepository;
@@ -31,7 +31,7 @@ CalculateDiscountService
   }
 ```
 
-CalculateDiscountServiceTest
+> CalculateDiscountServiceTest
 ```java
 public class CalculateDiscountServiceTest{
 
@@ -52,7 +52,7 @@ public class CalculateDiscountServiceTest{
   
 }
 ```
-위 테스트 코드는 구현체가 없어도 CalculateDiscountService를 테스트할 수 있음을 보여준다. 
+> 위 테스트 코드는 구현체가 없어도 CalculateDiscountService를 테스트할 수 있음을 보여준다. 
 
 
 
