--- a/2 장 아키텍쳐 개요/2-3_1.md
+++ b/2 장 아키텍쳐 개요/2-3_1.md
@@ -54,7 +54,12 @@ public class CalculateDiscountServiceTest{
 ```
 > 위 테스트 코드는 구현체가 없어도 CalculateDiscountService를 테스트할 수 있음을 보여준다. 
 
+# DIP 주의사항 
 
+DIP를 잘못 생각하면 단순히 인터페이스와 구현 클래스를 분리하는 정도로 받아들일 수 있다. 
+DIP의 핵심은 고수준 모듈이 저수준 모듈에 의존하지 않도록 하기 위함인데 DIP를 적용한 결과 구조만 보고 저수준 모듈에서 인터페이스를 추출 하는 경우가 있다.
+
+DIP를 적용할떄 하위 기능을 추상화한 인터페이스는 고수준 모듈 관점에서 도출한다. 
 
 
 
