--- a/2 장 아키텍쳐 개요/2-3_1.md
+++ b/2 장 아키텍쳐 개요/2-3_1.md
@@ -94,6 +94,8 @@ public class EmailNotifier implements Notifier{
   ....
   }
 }
+
+@Primary 또는 Qualifer
 public class CompositeNotifier implements Notifier{
   
   @Override
