--- a/2 장 아키텍쳐 개요/2-4.md
+++ b/2 장 아키텍쳐 개요/2-4.md
@@ -3,11 +3,10 @@
 ## 엔티티와 밸류
 도메인 모델을 만들 때 DB 테이블의 엔티티와 도메인 모델의 엔티티를 구분해야 한다. 도메인 모델의 엔티티와 DB관계형 모델의 엔티티는 같은 것이 아니다. 
 
-두 모델의 큰 차이점은 도메인 모델의 엔티티는 데이터와 함께 도메인 기능을 함께 제공한다는 점이다.
+- 두 모델의 큰 차이점은 도메인 모델의 엔티티는 데이터와 함께 도메인 기능을 함께 제공한다는 점이다.
 예로 주문을 표현하는 엔티티는 주문과 관련된 데이터뿐만 아니라 배송지 주소 변경을 위한 기능을 함께 제공한다.
 
-<pre>
-<code>
+```java
 public class Order{
   //주문 도메인 모델의 데이터
   private OrderNo number;
@@ -20,6 +19,81 @@ public class Order{
   ...
   }
 }
+```
+> 도메인 모델의 엔티티는 단순히 데이터를 담고 있는 데이터 구조라기보다는 데이터와 함께 기능을 제공하는 객체이다. 도메인 관점에서 기능을 구현하고 기능 구현을 캠슐화해서 데이터가 임의로 변경되는 것을 막는다.
+
+- 또 다른 차이점은 도메인 모델의 엔티티는 두 개 이상의 데이터가 개념적으로 하나인 경우 밸류 타입을 이용해서 표현할 수 있다는 것이다. 위 코드에서 주문자를 표현하는 Orderer는 밸류 타입으로 주문자의 이름과 이메일 데이터를 포함할 수 있다.
+
+```java
+public class Orderer{
+  private String name;
+  private String email;
+  ...
+}
+```
+RDBMS와 같은 관계형 DB는 밸류 타입을 제대로 표현하기 어렵다. Order객체의 데이터를 저장하기 위한 테이블은 orderer의 개별 데이터를 저장하거나 별도 테이블로 분히해서 저장해야한다.
+
+<pre>
+<code>
+
+  ORDER 
+  NO: VARCHAR
+  ORDER_NAME: VARCHAR
+  ORDER_EMAIL: VARCHAR
+  
+  또는 
+  
+  
+  ORDER 
+  NO: VARCHAR
+  ORDER_NAME: VARCHAR
+  ORDER_EMAIL: VARCHAR
+  
+  ORDER_ORDERER 
+  ORDER_NO: VARCHAR(FK)
+  ORDER_NAME: VARCHAR
+  ORDER_EMAIL: VARCHAR
+  
 </pre>
 </code>
+
+> 첫 번쨰는 주문자라는 개념이 드러나지 않고 주문자의 개별 데이터만 드러난다. 두 번쨰는 주문자 데이터를 별도 테이블에 저장했지만 이것은 테입ㄹ의 엔티티에 가까우며 밸류 타입의 의미가 드러나지 않는다.
+> 반면 Orderer는 주문자라는 개념을 잘 반영하고 있다.
+
+- 밸류는 불변해야한다. 
+이는 엔티티의 밸류 타입 데이터를 변경코자 할때는 완전히 교체하는 것을 의미한다.
+예로 배송지 정보를 변경하는 코드는 기존 객체의 값을 변경하지 않고 다음과 같이 새로운 객체를 필드에 할당한다. 
+```java
+public class Order{
+  private ShippingInfo shippingInfo;
+  ...
+  
+  //도메인 모델 엔티티는 도메인 기능도 함께 제공
+  public void changeShippingInfo(ShippingInfo newShippingInfo){
+  
+    // 변경코자하는 주문이 현재 배송지 변경이 가능한 구간인지
+    checkShippingInfoChangeable();
+    setShippingInfo(newShippingInfo);
+  }
+  
+  private void setShippingInfo(ShippingInfo newShippingInfo){
+    if(newShippingInfo == null) throw new IllegalArgumentException();
+    this.shippingInfo = newShippingInfo;
+  }
+  
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
 
