--- a/2 장 아키텍쳐 개요/2-4_1.md
+++ b/2 장 아키텍쳐 개요/2-4_1.md
@@ -9,3 +9,26 @@
     다른 엔티티나 밸류 객체에 접근한다.
     > 이는 에그리거트의 내부 구현을 숨겨서 에그리거트 단위로 구현을 캡슐화할 수 있도록 돕느다.
 
+루트 에그리거트인 Order는 주문 도메인 로직에 맞게 에그리거트의 상태를 관리한다. 예로 Order의 배송지 정보 변경 기능은 배송지를 변경할 수 있는지 확인 한뒤에 배송지 정보를 변경한다.
+```java
+  public class Order{
+    private ShippingInfo shippingInfo;
+    ...
+
+    //도메인 모델 엔티티는 도메인 기능도 함께 제공
+    public void changeShippingInfo(ShippingInfo newShippingInfo){
+
+      // 변경코자하는 주문이 현재 배송지 변경이 가능한 구간인지
+      checkShippingInfoChangeable();
+      setShippingInfo(newShippingInfo);
+    }
+
+    private void setShippingInfo(ShippingInfo newShippingInfo){
+      if(newShippingInfo == null) throw new IllegalArgumentException();
+      this.shippingInfo = newShippingInfo;
+    } 
+  }
+```
+주문 에그리거트는 Order를 통하지 않고 ShippingInfo를 변경할 수 있는 방법을 제공하지 않는다. 즉 배송지를 변경하려면 루트 엔티티인 Order를 사용해야 하므로 배송지 정보를 변경할 때에는 Order가 
+구현한 도메인 로직을 항상 따르게 된다.
+> 에그리거트를 구현할 때는 고려할 것이 많다. 에그리거트를 어떻게 구성했느냐에 따라 구현이 복잡해지기도 트랜잭션의 범위가 달라지기도 한다. 또한 선택한 구현 기술에 따라 에그리거트 구현에 제약이 생기기도 한다.
