--- a/2 장 아키텍쳐 개요/2-3을 공부하며 생각나는 점.md
+++ b/2 장 아키텍쳐 개요/2-3을 공부하며 생각나는 점.md
@@ -5,7 +5,7 @@
 
 예를 들어 
 '나중에 구현체가 추가 될것을 예상해서 인터페이스를 만들기 보다는, 클래스로 구현을 해놓고 다른 구현체가 추가되는 시점에 인터페이스를 만들도록 하는 방향'과 
-'단일 인터페이스, 단일 구현체 일지라도 DIP를 바탕으로 인터페이스를 두고 인프라가 응용 또는 도메인 클래스를 의존하는 Adapter 구현체(저수준 -> 고수준을 의존)를 분리하는 계층형 아키텍쳐링'
+'단일 인터페이스, 단일 구현체 일지라도 DIP를 바탕으로 인터페이스를 두고 인프라가 응용 또는 도메인 클래스를 의존하는 Adapter 구현체(저수준 -> 고수준을 의존)를 분리하는 계층형 아키텍쳐링'이 있다
 
 이 처럼 어느 것 하나 정답이라고 둘 수 없다. 내가 만약 개발 한다면 전자의 방식을 택할때는 나보다 해당 도메인에 좀 더 깊은 이해를 가지고있는 도메인 전문가와 이야기를 나누고 확장될 기능이
 없을 가능성이 높다면(없다면) 이렇게 개발할 수 도 있을것 같다. 
