--- a/2 장 아키텍쳐 개요/2-3을 공부하며 생각나는 점.md
+++ b/2 장 아키텍쳐 개요/2-3을 공부하며 생각나는 점.md
@@ -18,6 +18,6 @@
 
 
 
-책 읽으며 궁금한 점을 검색하면서 거기서 또 배울 수 있었던 글
+책 읽으며 궁금한 점을 검색하면서 거기서 또 배울 수 있었던 글과 댓글
 [좋은글1](https://www.popit.kr/spring-oop-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D-%EC%98%88%EC%A0%9C1-service-serviceimpl-%EA%B5%AC%EC%A1%B0%EC%97%90-%EB%8C%80%ED%95%9C-%EA%B3%A0%EC%B0%B0/)
 
