--- a/2 장 아키텍쳐 개요/2-6.md
+++ b/2 장 아키텍쳐 개요/2-6.md
@@ -6,4 +6,23 @@
 >> ui
 >> application
 >> domain
+>> infrastructure
+
+각 도메인이 크면 하위 도메인으로 나누고 각 하위 도메인 마다 별도 패키지를 구성한다.
+
+> com.myshop
+>> catalog
+>>> ui
+>>> application
+>>> domain
 >>> infrastructure
+>> order
+>>> ui
+>>> application
+>>> domain
+>>> infrastructure
+>> member
+>>> ui
+>>> application
+>>> domain
+>>> infrastructure 
