--- a/2 장 아키텍쳐 개요/2-6.md
+++ b/2 장 아키텍쳐 개요/2-6.md
@@ -12,19 +12,19 @@
 
 > com.myshop
 >> catalog
->>> ui
->>> application
->>> domain
+>>> ui,
+>>> application,
+>>> domain,
 >>> infrastructure
 
 >> order
->>> ui
->>> application
->>> domain
+>>> ui,
+>>> application,
+>>> domain,
 >>> infrastructure
 
 >> member
->>> ui
->>> application
->>> domain
+>>> ui,
+>>> application,
+>>> domain,
 >>> infrastructure 
