--- a/2 장 아키텍쳐 개요/2-6.md
+++ b/2 장 아키텍쳐 개요/2-6.md
@@ -3,12 +3,12 @@
 아키텍쳐의 각 영역은 별도 패키에 위치한다. **패키지 구성에 규칙은 없다** 하지만 다음 과 같이 영역 별로 모듈이 위치할 패키지를 구성할 수 있을 것이다.
 
 > com.myshop
->> ui
->> application
->> domain
->> infrastructure
+>> ui,
+>> application,
+>> domain,
+>> infrastructure,
 
-각 도메인이 크면 하위 도메인으로 나누고 각 하위 도메인 마다 별도 패키지를 구성한다.
+**각 도메인이 크면 하위 도메인으로 나누고 각 하위 도메인 마다 별도 패키지를 구성한다.**
 
 > com.myshop
 >> catalog
@@ -28,3 +28,13 @@
 >>> application,
 >>> domain,
 >>> infrastructure 
+
+**도메인 모듈은 도메인에 속한 애그리거트를 기준으로 다시 패키지를 구성한다**. 예로 카탈로그 개념적 도메인의 하위 도메인 모델이 상품 애그리거트와 카테고리 애그리거트로 구성될 경우 
+
+
+>> catalog
+  >>> ui,
+  >>> application,
+  >>> domain,
+    >>>> product, category
+  >>> infrastructure
