--- a/2 장 아키텍쳐 개요/2-6.md
+++ b/2 장 아키텍쳐 개요/2-6.md
@@ -32,8 +32,9 @@
 **도메인 모듈은 도메인에 속한 애그리거트를 기준으로 다시 패키지를 구성한다**.
 예로 카탈로그 개념적 도메인의 하위 도메인 모델이 상품 애그리거트와 카테고리 애그리거트로 구성될 경우 
 
->> catalog
+> catalog
 
 domain -> product, category <- infrastructure
+
 
 
