--- a/3 장 애그리거트/3-1.md
+++ b/3 장 애그리거트/3-1.md
@@ -1,6 +1,6 @@
 # 애그리거트 
 
-- 온라인 쇼핑몰 시스템을 개발할 때 상위 수준 개념을 이용해서 전체 모델을 정리하면 전반적인 관계를 이해하는 데 도움이 된다. 
+- 온라인 쇼핑몰 시스템을 개발할 때 상위 수준 개념(애그리거트 루트)을 이용해서 전체 모델을 정리하면 전반적인 관계를 이해하는 데 도움이 된다. 
 - 더 많은 코드를 보고 도메인 전문가와 더 많은 대화를 나눠야 비로소 상위 수준에서 모델 간의 관계가 이해되기 시작한다. 
 
 > 백 개 이상의 테이블을 한 장의 ERD에 모두 표시하면 개별 테이블 간의 관계를 파악하느라 큰 틀에서 데이터구조를 이해하는 데 어려움을 겪게 되는 것처럼, 도메인 객체 모델이 복잡해지면 개별 구성요소 위주로
