--- a/3 장 애그리거트/3-1.md
+++ b/3 장 애그리거트/3-1.md
@@ -35,7 +35,7 @@
 - 상품 상세 페이지에 들어가면 상품 상세 정보와 함께 리뷰내용을 보여줘야한다는 요구사항이 있을때 상품(Product)엔티티와 리뷰(Review)엔티티가 한 애그리거트에 속한다 생각할 수 있지만 이 둘은 함께 생성되지도
 않고 함께 변경되지도 않는다. 
 - 게다가 변경이나 수정의 주체 역시 다르다. Product는 상품 관리자가 Review는 고객이다. 
-> 그러므로 Review와 Product는 서로의 상태에 영향을 주지 않아야 하고 이는 서로 다른 애그리거트에 속한다 볼수있다. 
+> 그러므로 Review와 Product는 서로의 상태에 영향을 주지 않아야 한다. 서로 다른 애그리거트이다.
 
 
 
