--- a/3 장 애그리거트/3-2_2.md
+++ b/3 장 애그리거트/3-2_2.md
@@ -10,3 +10,65 @@
 <br>
 <br>
 예로 배송지 정보를 변경하면서 동시에 해당 배송지 정보를 회원의 주소로 설정하는 기능이 있다고 해보자
+
+```java
+public class Order{
+  private Orderer orderer;
+  
+  public void shipTo(ShippingInfo newShippingInfo, boolean useNewShippingAddrAsMemberAddr){
+    verifyNotYetShippied();
+    setShippingInfo();
+    if(useNewShippingAddrAsMemberAddr){
+      //다른 애그리거트의 상태를 변경하면 안됨.
+      orderer.getMember().changeAddress(newShippingInfo.getAddress());
+    }
+  }
+}
+```
+> 이는 애그리거트가 자신의 책임 범위를 넘어 다른 애그리거트의 상태까지 관리하는 꼴이 된다.
+- 애그리거트는 최대한 서로에게 독립적이어야 한다. 이유는 다른 애그리거트를 관리하는 꼴이 되게되면 서로간 결합도가 높아지기 때문이다.
+
+<br>
+<br>
+
+만약 부득이하게 한 트랜잭션에서 두 개의 애그리거트를 수정 해야하는 상황이라면 애그리거트에서 다른 애그리거트를 수정 하지말고 **응용 서비스 계층에서 수정하도록 구현 해야한다.**
+
+```java
+public class ChangeOrderService{
+
+  //두 개 이상의 애그리거트를 변경해야 하면, 응용 서비스에서 각 애그리거트의 상태를 변경한다.
+  @Transactional
+  public void changeShippingInfo(OrderId id, ShippingInfo newShippingInfo,
+                                boolean useNewShippingAddrAsMemberAddr){
+    Order order = orderRepository.findById(id);
+    if(order == null) throw new OrderNotFoundException();
+    order.shipTo(newShippingInfo);
+    if(useNewShippingAddrAsMemberAddr){
+      Member member = findMember(order.getOrderer());
+      member.changeAddress(newShippingInfo.getAddress());
+    }
+  }
+}
+```
+> 도메인 이벤트를 사용하면 한 트랜잭션에서 한 개의 애그리거트를 수정하면서도 동기나 비동기로 다른 애그리거트의 상태를 변경하는 코드를 작성할 수 있다. 
+
+*한 트랜잭션에서 하나의 애그리거트만 수정하는 것을 권장하지만 다음 3가지의 경우에는 한 트랜잭션에서 두 개 이상의 애그리거트를 변경하는 것을 고려할 수 있다.*
+
+1. 팀 표준 : 팀이나 조직의 표준에 따라 사용자 유스케이스의 관련된 응용 서비스의 기능을 한 트랜잭션으로 실행해야 하는 경우가 있다.
+2. 기술제약 : 기술적으로 이벤트 방식을 도입할 수 없는 경우 한 트랜잭션에서 다수의 애그리거트를 수정해서 일관성을 처리 해야한다.
+3. UI 구현의 편리 : 운영자의 편리함을 위해 주문 목록 화면에서 여러 주문의 상태를 한 번에 변경하고 싶을 것이다. 이경우 한 트랜잭션에서 여러 주문 애그리거트의 상태를 변경 해야한다.
+(예 : 주문 목록 UI에서 수정 버튼 클릭시 각 주문에 체크박스가 나타나고 체크한 주문을 취소할 수 있는 경우같은 것)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
