--- a/3 장 애그리거트/3-2_2.md
+++ b/3 장 애그리거트/3-2_2.md
@@ -1,7 +1,7 @@
 # 트랜잭션 범위
 
-당연히 **트랜잭션 범위는 작을수록 좋다.** 예를 들어 한 트랜잭션에서 3개의 테이블 수정을 진행 하게되면 트랜잭션 충돌을 막기위해서 수정할 행을 잠그기 때문. 잠금 대상이 많아 진다는 것은 그만큼 동시에 처리할 수
-있는 트랜잭션의 개수가 줄어든다는 것을 의미하기 때문이다. 이는 전체 시스템 성능을 떨어뜨리는 요인이다.
+당연히 **트랜잭션 범위는 작을수록 좋다.** 예를 들어 한 트랜잭션에서 3개의 테이블 수정을 진행 하게되면 트랜잭션 충돌을 막기위해서 수정할 행을 잠그기 때문. 잠금 대상이 많아 진다는 것은 그만큼 동시에 처리할 수있는 트랜잭션의 개수가 줄어든다는 것을 의미하기 때문이다. 이는 전체 시스템 성능을 떨어뜨리는 요인이다.
+> 물론 트랜잭션 isolation에따라서 다를 수 있다.
 <br>
 <br>
 동일하게 한 트랜잭션에서는 한 개의 애그리거트만 수정하는 것을 권장 한다. 한 트랜잭션에서 한 애그리거트만 수정 한다는 것은 애그리거트에서 다른 애그리거트의 변경을 하지 않는다는 것을 의미한다. 
