--- a/3 장 애그리거트/3-4.md
+++ b/3 장 애그리거트/3-4.md
@@ -34,7 +34,7 @@ public class Member{
   order.getOrderer().getMember().getId();
 ```
 이 처럼 아주 쉽게 구현 가능하다. *근데 프로그래밍은 역시 개발자가 힘들수록 안전하거나 성능이 좋거나 그렇다.*
-필드를 통한 다른 애그리거트 참조는 다음의 문제를 야기할 수 있다.
+**필드를 통한 다른 애그리거트 참조는 다음의 문제를 야기할 수 있다.**
 ## 편한 탐색 오용
 - 편리함을 오용할 수 있다는것이 가장 큰 문제라고 필자는 얘기한다. 이전 장에서 언급한 애그리거트에서 다른 애그리거트의 상태를 변경하면 안된다는 것을 언급했었다.
  한 애그리거트가 관리하는 범위는 자기 자신으로 한정해야한다. 그런데 애그리거트 내부에서 다른 애그리거트 객체에 접근할 수 있으면 다음 처럼 다른 애그리거트를 수정하고자 하는 유혹에 빠지기 쉽다.
@@ -58,17 +58,72 @@ public class Member{
  ```
 > 이는 쉽고 말고를 떠나서 시스템이 커지면 커질수록 성능이 중요해지면 중요해질수록 쓰면 안되는 이유가 조금 뒤에 나온다...
 한 애그리거트에서 다른 애그리커트의 상태를 변경하는 것은 애그리거트 간의 의존 결합도를 높여서 결과적으로 애그리거트의 변경을 어렵게 만든다.
+
+## 애그리거트를 직접 참조시 성능 이슈
+JPA를 사용하면 지연로딩과 즉시로딩의 두 가지 방식으로 로딩할 수 있다. 두 로딩 방식 중 무억을 사용할지는 애그리거트의 어떤 기능을 사용하느냐에 따라 달리진다. 
+<br>
+단순히 연관된 객체의 데이터를 함께 화면에 보여줘야 하면 즉시 로딩이 조회 성능 측면에서 유리하지만 상태를 변경하는 기능을 실행하는 경우에는 불필요한 객체를 함께 로딩할 필요가 없으므로 지연 로딩이 유리할 수 있다. 이러한 다양한 경우의 수를 생각해 JPQL/Criteria 쿼리의 로딩 전략을 결정해야 한다.
+
+## 확장
+*개인 적으로 이러한 생각은 경험해본적 없어서 떠오르지 않았었는데 객체 참조를 하지 못하는구나. 라고 생각되게하는 문제였다.*
+초기에는 단일 서버나 단일 RDBMS로 서비스를 제공하는 것이 가능하다. 하지만 트래픽이 증가함에 따라 부하를 분산하기 위해서 도메인 별로 시스템을 분리하는 마이그레이션을 진행한다.
+<br>
+이 과정에서 하위 도메인마다 서로 다른 RDBMS를 사용해야할 때가 있다.(성능적으로 더 좋다던지.. 부하를 덜 준다던지..) 심지어 하위 도메인마다 다른 종류의 데이터 저장소를 사용허기도 한다. 
+<br>
+**이는 더 이상 다른 애그리루트를 참조하기 위해 JPA와 같은 단일 기술을 사용할 수 없음을 의미한다.**
+
+## 방법은 
+**ID를 이용해서 다른 애그리거트를 참조하는 것이다.** 
+<br>
+예로 처음 언급한 예시를 가져온다.
+```java
+public class Order{
+  @Embeded
+  private Orderer orderer;
+  ...
+}
+
+@Embedabel
+public class Orderer{
+  //private Member member;
+  
+  priavate MemberId memberId;
+  private String name;
+  ...
+}
+
+public class Member{
+  private MemberId id;
+  ...
+}
+```
+ID 참조를 사용하면서 모든 객체가 참조로 연결되지 않고 한 애그리거트에 속한 객체들만 참조로 연결한다. 이는 에그리거트의 경계를 명확히 하고, 다른 애그리거트와의 결합도를 낮추고, 에그리거트 간 물리적인 
+연결을 제거하기 때문에 모델의 복잡도를 낮춘다. 또한, 에그리거트 간의 의존을 제거하므로 응집도를 높여준다.
 <br>
 <br>
+구현 복잡도도 낮아진다. 다른 애그리거트를 직접 참조하지 않으므로 지연로딩과 즉시로딩사이에서 고민하지 않아도 된다. 참조하는 애그리거트가 필요하면 응용 서비스에서 ID를 이용해서 로딩 하면된다.
+```java
+public class ChangeOrderService{
+  ...
+  
+  @Transactional
+  public void changeShippingInfo(OrderId id, ShippingInfo newShippingInfo,
+                                 boolean useNewShippingAddrAsMemberAddr){
+    Order order = orderRepository.findById(id);
+    if(order == null) throw new OrderNotFoundException();
+    order.changeShippingInfo(newShippingInfo);
+    if(useNewShippingAddrAsMemberAddr){
+      //ID를 이용해서 참조하는 애그리거트를 구한다. 객체 참조 x
+      Member member = memberRepository.findById(order.getOrderer().getMemberId());
+      member.changeAddress(newShippingInfo.getAddress());
+    }
+  }
+}
+```
+외부 에그리거트를 참조 하지않기 때문에 애초에 한 애그리거트에서 다른 애그리거트의 상태를 변경할 수 없는 것이다.
+<br>
+<br>
+애그리거트별로 다른 구현 기술을 사용하는 것도 가능해진다. 중요한 데이터인 주문 애그리거트는 RDBMS에 저장하고, 조회 성능이 중요한 상품 애그리거트는 NoSQL에 저장할 수 있다.
+<br>
+또한 각 도메인을 별도 프로세스로 서비스하도록 구현할 수 있다.
 
-
-
-
-
-
-
-
-
-
-
-처음 3.4의 주제를 보고 음? 하는 생각이 들ㅇ
