--- a/3 장 애그리거트/3-4.md
+++ b/3 장 애그리거트/3-4.md
@@ -87,7 +87,7 @@ public class Order{
 public class Orderer{
   //private Member member;
   
-  priavate MemberId memberId;
+  private MemberId memberId;
   private String name;
   ...
 }
