--- a/3 장 애그리거트/3-4.md
+++ b/3 장 애그리거트/3-4.md
@@ -34,6 +34,7 @@ public class Member{
   order.getOrderer().getMember().getId();
 ```
 이 처럼 아주 쉽게 구현 가능하다. *근데 프로그래밍은 역시 개발자가 힘들수록 안전하거나 성능이 좋거나 그렇다.*
+<br>
 **필드를 통한 다른 애그리거트 참조는 다음의 문제를 야기할 수 있다.**
 ## 편한 탐색 오용
 - 편리함을 오용할 수 있다는것이 가장 큰 문제라고 필자는 얘기한다. 이전 장에서 언급한 애그리거트에서 다른 애그리거트의 상태를 변경하면 안된다는 것을 언급했었다.
@@ -126,4 +127,6 @@ public class ChangeOrderService{
 애그리거트별로 다른 구현 기술을 사용하는 것도 가능해진다. 중요한 데이터인 주문 애그리거트는 RDBMS에 저장하고, 조회 성능이 중요한 상품 애그리거트는 NoSQL에 저장할 수 있다.
 <br>
 또한 각 도메인을 별도 프로세스로 서비스하도록 구현할 수 있다.
+<br>
+**어떤 것이든 TradeOff가 있기 마련 한 가지 문제가 있다. 물론 해결 방법도 있다.**
 
