--- a/3 장 애그리거트/3-4.md
+++ b/3 장 애그리거트/3-4.md
@@ -128,5 +128,5 @@ public class ChangeOrderService{
 <br>
 또한 각 도메인을 별도 프로세스로 서비스하도록 구현할 수 있다.
 <br>
-**어떤 것이든 TradeOff가 있기 마련 한 가지 문제가 있다. 물론 해결 방법도 있다.**
+**어떤 것이든 TradeOff가 있기 마련 한 가지 문제가 있다. 물론 해결 방법도 있다. 다음 장에서 알아보자**
 
