--- a/3 장 애그리거트/3-4_1.md
+++ b/3 장 애그리거트/3-4_1.md
@@ -6,5 +6,69 @@
 <br>
 
 ```java
-public class 
+Member member = memberRepository.findById(ordererId);
+List<Order> orders = orderRepository.findByOrderer(ordererId);
+List<OrderView> dtos = orders.stream()
+                       .map(order -> {
+                          productId prodId = order.getOrderLines().get(0).getProductId();
+                          //각 주문마다 첫 번째 주문 상품 정보 로딩 위한 쿼리 실행
+                          Product product = productRepository.findById(prodId);
+                          return new OrderView(order, member, product);
+                       }).collect(toList());                     
 ```
+> 비효율은 말할것도 없거니와 N+1문제로 인한 크리티컬한 문제를 일으킬 요지가 있다.
+
+## N+1 
+N+1 조회 문제는 더 많은 쿼리를 실행하기 때문에 전체 조회 속도가 느려지는 원인이 된다.이 문제가 발생하지 않도록 조인을 사용해야 한다. 조인을 사용하는 가장 쉬운 방법은 ID참조 방식을 객체 참조 방식으로 바꾸고 즉시 로딩을 사용하면된다. 하지만 이 방식은 애그리거트 간 참조를 ID 참조 방식에서 객체 참조 방식으로 다시 되돌리는 것이다. 
+<br>
+<br>
+ID 참조 방식을 사용하면서 N+1 조회와 같은 문제가 방생하지 않도록 하려면 조회 전용 쿼리를 사용하면 된다.
+<br>
+예를 들어 데이터 조회를 위한 별도 DAO를 만들고 DAO의 조회 메서드에서 조인을 이용해 한 번의 쿼리로 필요한 데이터를 로딩하면 된다.
+
+```java
+ @Repository
+ public class JpaOrderViewDao implemets OrderViewDao{
+    @PersistenceContext
+    private EntityManager em;
+    
+    @Override
+    public List<OrderView> selectByOrderer(String ordererId){
+      string selectQuery = 
+              "select new com.myshop.order.application.dto.OrderView(o,m,p) "+
+              "from Order o join o.orderLines ol, Member m, Product p "+
+              "where o.orderer.memberId.id = :ordererId "+
+              "and o.orderer.memberId = :m.id "+
+              "and index(ol) = 0 "+
+              "and ol.productId = p.id "+
+              "order by o.number.number desc";
+      TypeQuery<OrderView> query = 
+                em.createQuery(selectQuery, OrderView.class);
+      query.setParameter("ordererId", ordererId);
+      return query.getResultList();
+    
+    }
+ }
+```
+위 코드는 JPA를 이용해서 특정 사용자의 주문 내역을 보여주기 위한 코드이다. 이 코드는 JPQL을 사용하는데, 이 JPQL은 Order 애그리거트와 Member 애그리거트 그리고 Product 애그리거트를 조인으로 
+조회하여 한 번의 쿼리로 로딩한다. 즉시 로딩이나 지연 로딩과 같은 로딩 전략을 고민할 필요가 없다.
+<br>
+쿼리가 복잡하거나 통계적인 데이터가 필요하다면 SQL에 특화된 기능을 사용할 수 있게 조회를 위한 부분만 Mybtis나 JOOQ와 같은 기술을 이용해서 구현할 수 도있다.
+<br>
+<br>
+애그리거트마다 서로 다른 저장소를 사용하면 한 번의 쿼리로 관련 애그리거트를 조회할 수 없다. 이때는 조회 성능을 높이기 위해 캐시를 적용하거나 조회 전용 저장소를 따로 구성한다.
+<br>
+코드가 복잡해지는 단점이 있지만 시스템의 처리량을 높일 수 있다는 장점이 있다. 특히 한 대의 DB장비로 대응할 수 없는 수준의 트래픽이 발생하는 경우 캐시나 조회 전용 저장소는 필수로 선택해야 하는 기법이다.
+
+
+
+
+
+
+
+
+
+
+
+
+
