--- a/4 장 JPA를 이용한 레포지토리 구현/4-1.md
+++ b/4 장 JPA를 이용한 레포지토리 구현/4-1.md
@@ -234,6 +234,194 @@ public class OrderNo implements Serializable{
   ...
 }
 ```
+# 별도 테이블에 저장하는 밸류 매핑
+애그리거트에서 루트엔티티를 제외한 나머지 구성요소는 대부분 밸류이다. 루트 엔티티 외에 또 다른 엔티티가 있다면 진짜 엔티티인지 의심해 봐야 한다. 
+<br>
+**단지 별도 테이블에 데이터를 저장한다고 해서 엔티티인 것은 아니다.** 
+<br>
+주문 애그리거트도 OrderLine을 별도 테이블에 저장하지만 OrderLine자체는 엔티티가 아니라 밸류이다(실제로 OrderLine만을 저장하는 Repository는 없다. 밸류가 아니라 엔티티가 확실하다면 해당 엔티티가 다른 애그리거트는 아닌지 확인해야 한다. 특히 자신만의 독자적인 라이프 사이클을 갖는다면 구분되는 다른 애그리거트일 가능성이 높다. 
+<br>
+예를 들어 상품 상세 화면을 보면 상품 자체에 대한 정보와 고객의 리뷰를 함께 보여주는데 이를 보고 상품 애그리거트에 고객 리뷰가 포함된다고 생각할 수 있다. 하지만 Product와 Review는 함께 생성되지 않고, 
+함께 변경되지도 않는다. 게다가 변경 주체도 다르다.(Product는 상품 관리자, Review는 고객) Review의 변경이 Product에 영향을 주지 않고, Product의 변화가 Review에 영향을 주지 않기 때문에 Review는 엔티티는 맞지만 리뷰 애그리거트에 속한 엔티티이지 상품 애그리거트에 속한 엔티티는 아니다. 
+<br>
+<br>
+*애그리거트에 속한 객체가 밸류인지 엔티티인지 구분하는 방법은 **고유 식별자를 갖는지**를 확인하는 것이다. 
+<br>
+*하지만 식별자를 찾을 때 매핑되는 테이블의 식별자를 애그리거트 구성요소의 식별자와 동일한 것으로 착각하면 안 된다.* 별도 테이블로 저장하고 테이블에 PK가 있다고 해서 테이블과 매핑되는 애그리거트 구성요소가 항상 고유 식별자를 갖는 것은 아니가 때문이다.
+<br>
+<br>
+예를 들어 게시글 데이터를 ARTICLE 테이블과 ARTICLE_CONTENT(아티클의 설명 및 아티클의 타입을 저장하는 곳) 테이블로 나눠서 저장한다고 하자. 
+```
+ARTICLE  1 -------------- 1   ARTICLE_CONTENT  
+ID : INT                      CONTENT: VARCHAR
+TITLE : VARCHAR               CONTENT_TYPE: VARCHAR
+```
+> 위만 보면 ARTICLE_CONTENT 테이블의 ID칼럼이 식별자 이므로 ARTICLE_CONTENT와 매잎ㅇ되는 ArticleContent를 엔티티로 생각해서 Article과 ArticleContent를 1:1 매핑을 할 수 있다.
+ArticleContent를 엔티티로 생각할 수 있지만 ArticleContent는 Article의 내용을 담고 있는 밸류로 생각하는 것이 맞다. ARTICLE_CONETENT의 ID는 식별자이긴 하지만 이 식별자를 사용하는 이유는 
+ARTICLE테이블의 데이터와 연결하기 위함이지 ARTICLE_CONTENT를 위한 별도 식별자가 필요하기 때문은 아니다(가령 ArticleContent만 따로 찾는다던지).
+<br>
+*즉, 이것은 게시글의 특정 프로퍼디를 별도 테이블에 보관한 것으로 접근해야한다.* ArticleContent를 밸류로 보고 접근하면 모델은 이렇게 바뀐다
+```
+Article. ---------------------> ArticleContent
+-id: Long                       -content: String
+-title: String                  -contentType: String
+-content: ArticleContent
+```
+> 생겨먹은 것은 마치 의존하는것 같다(개인 적인 생각)
+ArticleContent는 밸류 이므로 @Embeddable로 매핑한다. ArticleContent와 매핑되는 테이블은 Article과 매핑되는 테이블과 다르다. 이때 밸류를 매핑 한 테이블을 지정하기 위해 
+<br>
+@SecondaryTable과 @AttributeOverride를 사용한다. 
+
+```java
+@Entity
+@Table(name = "article")
+@SecondaryTable(
+  name = "article_content",
+  pkJoinColumns = @PrimaryKeyJoinColumn(name = "id")
+)
+public class Article {
+  
+  @Id
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
+  private Long id;
+  
+  private String title;
+  
+  @AttributeOverride({
+    @AttributeOverride(
+      name = "content",
+      column = @Column(table = "article_content",name = "content"))
+      
+    @AttributeOverride(
+      name = "content_type",
+      column = @Column(table = "article_content",name = "content_type"))  
+  })
+  @Embedded
+  private ArticleContent content;
+  
+  ...
+}
+
+@Embeddable
+public class ArticleContent {
+  private String content;
+  private String content_type;
+  
+  ....
+}
+```
+> @SecondaryTable의 name 속성은 밸류를 저정할 테이블을 지정한다. pkJoinColumns속성은 밸류 테이블에서 엔티티 테이블로 조인할 떄 사용할 컬럼을 지정한다. 
+
+```java
+Article article = entityManager.find(Article.class, 1L);
+```
+@SecondaryTable로 위 코드를 실행하면 두 테이블을 조인해서 데이터를 조회한다.
+
+게시글 목록을 보여주는 화면은 article 테이블의 데이터만 필요하지 article_content테이블의 데이터는 필요하지 않다. 그런데 @SecondaryTable을 사용하면 목록 화면에 보여줄 Article을 조회할 때 article_content테이블 까지 조인해서 데이터를 읽어오는데 이것은 낭비다. 
+<br>
+<br>
+이 문제를 해소하려면 @Embeddable 설정되 있는 ArticleContent를 Entity로 설정하고 로딩을 지연로딩을 사용하면 되지만 밸류 모델을 엔티티로 만드는 것이 썩 좋은 방법 같지는 않다. 
+*대신 **조회 전용 기능**을 구현하는 방법을 사용하는 것이 좋다.* JPA에서 조회 전용 쿼리가 중요한 이유이다. 뒷장에서 다룬다.
+
+# 밸류 컬렉션을 @Entity로 매핑하기 
+
+개념저긍로 밸류인데 구현 기술의 한계나 팀 표준 때문에 @Entity를 사용해야 할 때도 있다. 예를 들어 '제품의 이미지 업로드 방식에 따라 이미지 경로와 섬네일 이미지 제공 여부가 달라진다'고 해보자. 
+이를 위해 Image를 다음과 같은 계층 구조로 설계할 수 있다.
+
+```java
+Product
+id: ProductId
+image: List<Image>
+
+                |
+
+              Image
+              -path
+              +getURL() : String
+              +hasThumbnail(): boolean
+              +getThumbnail(): String.         
+
+|                                               |
+
+InternalImage                                ExternalImage
++getURL() : String                           +getURL(): String
++hasThumbnail(): boolean                     +hasThumbnail(): boolean
++getThumbnail(): String                      +getThumbnail(): String
+```
+JPAsms @Embeddable 타입의 클래스 상속 매핑을 지원하지 않는다. 상속 구조를 갖는 밸류 타입을 사용하려면 Embeddable대신 @Entity를 이용해서 상속 매핑으로 처리해야 한다. 
+밸류 타입을 @Entity로 매핑하므로 식별자 매핑을 위한 필드도 추가해야 한다. 또한 구현 클래스를 구분하기 위한 타입 식별 칼럼을 추가해야 한다.
+<br>
+<br>
+한 테이블에 Image와 그 하위 클래스를 매핑하므로 Image 클래스에 다음 설정을 사용한다. 
+- @Inheritance 애너테이션 적용
+- strategy 값으로 SINGLE_TABLE 사용
+- @DiscriminatorColumn 애너테이션을 이용하여 타입 구분용으로 사용할 칼럼 지정 
+<br>
+Image를 @Entity로 매핑 했지만 모델에서 Image는 밸류이므로 상태를 변경하는 코드는 추가 하지 않는다.
+
+
+```java
+
+@Entity
+@Inheritance(strategy = InheritanceType.SINGLE_TABLE)
+@DiscriminatorColumn(name = "image_type")
+@Table(name = "image")
+public abstract class Image {
+  @Id
+  @GeneratedValue(strategy = GenerationType.INDENTITY)
+  @Column(name = "image_id")
+  private Long id;
+  
+  @Column(name = "image_path")
+  private String path;
+  
+  @Temporal(TemporalType.TIMESTAMP)
+  @Column(name = "upload_time")
+  private Date uploadTime;
+  
+  protected Image() {}
+  
+  public Image(String path) {
+    this.path = path;
+    this.uploadTime = new Date();
+  }
+  
+  Protected String getPath() {
+    return path;
+  }
+  
+  public date getUploadTime() {
+    return uploadTime;
+  }
+  
+  public abstract String getURL();
+  public abstract boolean hasThumbnail();
+  public abstract String getThumbnail();
+  
+}
+
+@Entity
+@DiscriminatorValue("II")
+public class InternalImage extends Image {
+  ...
+}
+
+@Entity
+@DiscriminatorValue("EI")
+public class ExternalImage extends Image {
+  ...
+}
+```
+image가 @Entity이므로 목록을 담고 있는 Product는 다음 코드블럭과 같이 @OneToMany로 를 이용해서 매핑을 처리한다. Image는 밸류이므로 독자적인 라이프 사이클을 갖지 않고 Product에 완전히 의존한다.
+
+
+
+
+
+
+
+
+
 
 
 
