--- a/4 장 JPA를 이용한 레포지토리 구현/4-1.md
+++ b/4 장 JPA를 이용한 레포지토리 구현/4-1.md
@@ -414,9 +414,83 @@ public class ExternalImage extends Image {
 ```
 image가 @Entity이므로 목록을 담고 있는 Product는 다음 코드블럭과 같이 @OneToMany로 를 이용해서 매핑을 처리한다. Image는 밸류이므로 독자적인 라이프 사이클을 갖지 않고 Product에 완전히 의존한다.
 
+```java
+@Entity
+@Table(name= "product")
+public class Product {
+  @EmbeddedId
+  private ProductId id;
+  private String name;
+  
+  @Convert(converter = MoneyConverter.class)
+  private Money price;
+  private String detail;
+  
+  @OneToMany(cascade = {CascateType.PERSIST, CascadeType.REMOVER},OrphanRemoval = true)
+  @JoinColumn(name = "product_id")
+  @OrderColumn(name = "list_idx")
+  private List<Image> images = new ArrayList<>();
+  
+  ...
+  
+  public void changeImages(List<Image> newImages){
+    this.images.clear();
+    this.images.addAll(newImages);
+  }
+}
+```
+changeImages() 메서드를 보면 이미지 교체를 위해 clear() 메서드를 사용하는데 @Entity에 대한 @OneToMany 매핑의 컬렉션 Clear메서드는 삭제 과정이 효율적이지 않다. 
+select 쿼리로 삭제 대상 엔티티를 로딩하고, 각 개별 엔티티에 대해 delete 쿼리가 실행된다. 즉, Images에 보관되어 있던 Image 개수가 4개면 Image 목록을 가져오기 위해 한 번의select쿼리가 실행 되고 4번의 delete 쿼리가 실행된다. 변경 빈도가 낮으면 괜찮지만 잦은 요소라면 서비스 성능에 문제를 일으킬 소지가 있다. 
+<br>
+<br>
+한편, 하이버네이트는 @Embeddable 타입에 대한 컬렉션의 clear() 호출하면 컬렉션에 속한 객체를 로딩 하지 않고 한번의 delete쿼리로 삭제처리가 가능하다. 따라서 애그리거트의 특성을 유지하면서 이 문제를 해결하려면 결국 상속을 포기하고 @Embeddable로 매핑된 단일 클래스로 구현해야 한다. 때로는 if-else를 써야한다. 
+
+```java
+@Embeddable 
+public class Image {
+  @Column(name = "image_type")
+  private String imageType;
+  
+  @Column(name = "image_path")
+  private String path;
+  
+  @Temporal(TemporalType.TIMESTAMP)
+  private Date uploadTime;
+  
+  ...
+  
+  public boolean hasThumbnail() {
+    // 성능을 위해 다형을 포기하고 if-else로 구현
+    if(imageType.equals("II")){
+      return true;
+    } else {
+      return false;
+    }
+  }
+}
+```
+> 코드 유지 보수와 성능 사이에서 TradeOff를 고려해서 구현 방식을 선택해야한다. 
+
+# ID참조와 조인테이블을 이용한 단방향 M:N 매핑
+
+애그리거트 간 집합 연관은 성능 상의 이유로 피해야 한다고 했다. 그럼에도 불구하고 요구사항을 구현하는 데 집합 연관을 사용하는 것이 유리하다면 ID참조를 이용한 단방향 집합 연관을 적용할 수 있다. 
 
 
-
+```java
+@Entity
+@Table(name = "product")
+public class Product {
+  @Embedded
+  priavet ProductId id;
+  
+  @ElementCollection
+  @CollectionTable(name = "product_category", JoinColumns = @Joincolumn(name = "product_id"))
+  private Set<CategoryId> categoryIds;
+  ...
+}
+```
+Product에서 Category로의 단방향 M:N 연관을 ID참조 방식으로 구현했다. 밸류 컬렉션 매핑과 동일한 방식으로 설정한 것을 볼 수 있는데, 차이점은 집합의 값을 밸류 대신 연관을 맺는 식별자가 온다는 것이다. @ElementCollection을 이용하기 때문에 Product를 삭제할 때 매핑에 사용한 조인 테이블의 데이터도 함꼐 삭제된다. 애그리거트를 직접 참조하는 방식을 사용했다면 영속성 전파나 로딩 전략을 고민해야 하지만 
+ID참조 방식을 사용함으로써 이런 고민을 없앨 수 있다. 
 
 
 
