--- a/4 장 JPA를 이용한 레포지토리 구현/4-1.md
+++ b/4 장 JPA를 이용한 레포지토리 구현/4-1.md
@@ -245,28 +245,33 @@ public class OrderNo implements Serializable{
 함께 변경되지도 않는다. 게다가 변경 주체도 다르다.(Product는 상품 관리자, Review는 고객) Review의 변경이 Product에 영향을 주지 않고, Product의 변화가 Review에 영향을 주지 않기 때문에 Review는 엔티티는 맞지만 리뷰 애그리거트에 속한 엔티티이지 상품 애그리거트에 속한 엔티티는 아니다. 
 <br>
 <br>
-*애그리거트에 속한 객체가 밸류인지 엔티티인지 구분하는 방법은 **고유 식별자를 갖는지**를 확인하는 것이다. 
+*애그리거트에 속한 객체가 밸류인지 엔티티인지 구분하는 방법은 **고유 식별자를 갖는지**를 확인하는 것이다.* 
 <br>
-*하지만 식별자를 찾을 때 매핑되는 테이블의 식별자를 애그리거트 구성요소의 식별자와 동일한 것으로 착각하면 안 된다.* 별도 테이블로 저장하고 테이블에 PK가 있다고 해서 테이블과 매핑되는 애그리거트 구성요소가 항상 고유 식별자를 갖는 것은 아니가 때문이다.
+*하지만 식별자를 찾을 때 매핑되는 테이블의 식별자를 애그리거트 구성요소의 식별자와 동일한 것으로 착각하면 안 된다.*
+별도 테이블로 저장하고 테이블에 PK가 있다고 해서 테이블과 매핑되는 애그리거트 구성요소가 항상 고유 식별자를 갖는 것은 아니가 때문이다.
 <br>
 <br>
 예를 들어 게시글 데이터를 ARTICLE 테이블과 ARTICLE_CONTENT(아티클의 설명 및 아티클의 타입을 저장하는 곳) 테이블로 나눠서 저장한다고 하자. 
+
 ```
 ARTICLE  1 -------------- 1   ARTICLE_CONTENT  
 ID : INT                      CONTENT: VARCHAR
 TITLE : VARCHAR               CONTENT_TYPE: VARCHAR
 ```
+
 > 위만 보면 ARTICLE_CONTENT 테이블의 ID칼럼이 식별자 이므로 ARTICLE_CONTENT와 매잎ㅇ되는 ArticleContent를 엔티티로 생각해서 Article과 ArticleContent를 1:1 매핑을 할 수 있다.
 ArticleContent를 엔티티로 생각할 수 있지만 ArticleContent는 Article의 내용을 담고 있는 밸류로 생각하는 것이 맞다. ARTICLE_CONETENT의 ID는 식별자이긴 하지만 이 식별자를 사용하는 이유는 
 ARTICLE테이블의 데이터와 연결하기 위함이지 ARTICLE_CONTENT를 위한 별도 식별자가 필요하기 때문은 아니다(가령 ArticleContent만 따로 찾는다던지).
 <br>
 *즉, 이것은 게시글의 특정 프로퍼디를 별도 테이블에 보관한 것으로 접근해야한다.* ArticleContent를 밸류로 보고 접근하면 모델은 이렇게 바뀐다
+
 ```
 Article. ---------------------> ArticleContent
 -id: Long                       -content: String
 -title: String                  -contentType: String
 -content: ArticleContent
 ```
+
 > 생겨먹은 것은 마치 의존하는것 같다(개인 적인 생각)
 ArticleContent는 밸류 이므로 @Embeddable로 매핑한다. ArticleContent와 매핑되는 테이블은 Article과 매핑되는 테이블과 다르다. 이때 밸류를 매핑 한 테이블을 지정하기 위해 
 <br>
