--- a/4 장 JPA를 이용한 레포지토리 구현/4-2.md
+++ b/4 장 JPA를 이용한 레포지토리 구현/4-2.md
@@ -1,2 +1,131 @@
 # 애그리거트 로딩 전략
-*안냐ㅇ*
+JPA 매핑을 설장할 때 항상 기억해야 할 점은 애그리거트에 속한 객체가 모두 모여야 완전한 하나가 된다는 것이다. 즉, 다음과 같이 애그리거트 루트를 로딩하면 루트에 속한 모든 객체가 완전한 상태여야 함을 의미한다. 
+
+```java
+//product는 완전한 하나여야 한다.
+Product product = productRepository.findById(id);
+```
+조회 시점에서 애그리거트를 완전한 상태가 되도록 하려면 루트 엔티티에서 연관 매핑의 로딩 전략을 FetchType.EAGER로 설정 하면 된다. 
+<br>
+<br>
+즉시 로딩 방식으로 설정하면 애그리거트 루트를 로딩하는 시점에 애그리거트에 속한 모든 객체를 함께 로딩할 수 있는 장점이 있지만 이것이 항상 좋은 것은 아니다. 특히 컬렉션에 대한 로딩전략을 EAGER로 설정하면 오히려 즉시 로딩 방식이 문제가 될 수 있다. 
+<br>
+<br>
+예를 들어 *Product 애그리거트 루트가 @Entity로 구현한 Image와 @Embeddable로 구현한 Option 목록을 갖고 있다고 해보자*
+```java
+@Entity
+@Table(name = "product")
+public class Prduct {
+  
+  ....
+  
+  @OneToMany(cascade = {CascadeType.PERSIST, CascadeType.REMOVE},
+                        OrphanRemoval = true,
+                        fetch = FetchType.EAGER)
+  @JoinColumn(name = "product_id")
+  @OrderColumn(name = "list_idx")
+  priavet List<Image> images = new ArrayList<>();
+  
+  @ElementCollection(fetch = FetchType.EAGER)
+  @CollectionTable(name = "product_option",
+                  joinColumns = @JoinColumn(name = "product_id"))
+  @OrderColumn(name = "list_idx")
+  private List<Option> options = new ArrayList<>();
+  
+ ...
+}
+```
+해당 매핑은 EntityManager #find() 메서드로 Product를 조회하면 하이버네이터는 다음과 같이 Product를 위한 테이블, Image를 위한 테이블, Option을 위한 테이블을 조인한 쿼리를 실행한다.
+그렇게 실행 되는 쿼리는 *카타시안 조인*을 사용하고 이는 쿼리 결과에 중복을 발생시킨다. 조회하는 Product의 Image가 2개이고, Option이 2개면 구해지는 행 개수는 4개가 된다. Product 테이블의 정보는 4번 중복되고 image와 product_option 테이블의 정보는 2번 씩 중복된다. 
+<br>
+<br>
+물론 하이버네이트가 똑똑하게 중복된 데이터는 걸러서 1개의 Product객체, 2개의 Image와 Option객체를 주지만 애그리거트가 커지면 문제가 될 수 있다. 
+<br>
+<br>
+예를 들어 한 개의 제품에 대한 이미지가 20개고 Option이 15개면 EntityMangager #find 메서드가 실행하는 쿼리는 300행을 리턴한다. 실제 필요한 행 개수가 36개인 것과 비교하면 과도하게 많다. 
+*(더 많아 지면 많아 진만큼 어플리케이션에 로딩 시킨다음 작업 하기때문에 수십 수백만개가 되는 순간 어플리케이션은...)* 보통 조회 성능 문제 때문에 즉시 로딩 방식을 사용하지만 이렇게 조회되는 데이터 개수가 많아지면 즉시 로딩 방식을 사용할 때 성능(실행 빈도, 트래픽, 지연 로딩 시 실행속도와의 비교)을 검토해서 사용해야한다.
+<br>
+<br>
+애그리거트는 개념적으로 하나여야 한다. 하지만 루트 엔티티를 로딩하는 시점에 애그리거트에 속한 개게를 모두 로딩해야 하는 것은 아니다. 애그리거트가 완전해야 하는 이유는 두 가지 정도로 생각해 볼 수 있다. 
+<br>
+- 상태를 변경하는 기능을 실행할 때 애그리거트 상태가 완전해야 하기때문 (밸류 타입의 변경 기능은 애그리거트 루트에 있기때문에)
+- 표현 영역에서 애그리거트의 상태 정보를 보여줄 때 필요하기 때문
+<br>
+<br>
+이 중 두번째는 별도의 조회 전용 기능과 모델을 구현하는 방식을 사용하는 것이 더 유리하기 때문에 애그리거트의 완전한 로딩과 관련된 문제는 *상태 변경과 더 관련이 있다.* 
+<br>
+상태 변경 기능을 실행하기 위해 조회 시점에 즉시 로딩을 이용해서 애그리거트를 오나전한 상태로 로딩할 필요는 없다. JPA는 트랜잭션 범위에서 지연로딩을 허용하기 때문에 상태를 변경하는 시점에 필요한 구성요소만 로딩해도 문제가 되지 않는다. 
+
+
+```java
+@Transactional
+public void removeOptions(ProductId id, int optIdxToBeDelete){
+  //Product를 로딩. 컬렉션은 지연 로딩을 채택했기 때문에 Option은 로딩하지 않음. 
+  Product product = productRepository.findById(id);
+  
+  //트랜잭션 범위이므로 지연 로딩으로 설정한 연고나 로딩 가능 (변경 감지)
+  product.removeOption(optIdxToBeDelete);
+  
+}
+
+
+
+@Entity
+public class Product {
+  
+  @ElementCollection(fetch = FetchType.LAZY)
+  @CollectionTable(name = "product_option",
+                  joinColumns = @Joincolumn(name = "product_id"))
+  @OrderColumn(name = "list_idx")
+  private List<Option> options = new ArrayList<>();
+  
+  public void removeOption(int optIdx){
+    //실제 컬렉션에 접근할때 로딩 
+    this.options.remove(optIdx);
+  }
+}
+```
+게다가 일반적인 애플리케이션은 상태 변경 기능을 실행하는 빈도 보다 조회 기능을 실행하는 빈도가 훨씬 높다. 그러므로 상태 변경을 위해 지연 로딩을 사용할 때 발생하는 추가 쿼리로 인한 실행 속도 저하는 보통 문제가 되지 않는다. 
+<br>
+<br>
+*이러한 이유로 애그리거트 내의 모든 연관은 즉시 로딩으로 설정할 필요가 없다.* 물론 지연 로딩은 즉시 로딩보다 쿼리 실행 횟수가 많아질 가능성이 높다. 그러므로 무조건 적인 로딩전략 선택 보다는 애그리거트에 맞게 즉시 로딩과 지연로딩을 선택해야 한다. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
