--- a/4 장 JPA를 이용한 레포지토리 구현/4-4.md
+++ b/4 장 JPA를 이용한 레포지토리 구현/4-4.md
@@ -51,6 +51,7 @@ public class OrderIdSerivce{
 ```
 
 식별자 생성 규칙을 구현하기에 적합한 또 다른 장소는 리포지터리다. 다음과 같이 리포지터리 인터페이스에 식별자를 생성하는 메서드를 추가하고 리포지터리 구현 클래스에서 알맞게 구현 하면된다.
+> JAVA 8 부터는 interface에 default 메서드를 사용할 수 있는데 default 메서드는 인터페이스를 사용하는 곳에서 기본적으로 기능을 실행 할 수 있다.
 
 ```java
 public interface ProductRepository {
@@ -58,7 +59,19 @@ public interface ProductRepository {
   ...
   // 식별자 생성 메서드
   ProductId nextId();
+  
+  //default 메서드 사용
+  default ProductId nextId(){
+   // 아이디 생성 규칙 
+   ... 
+   return ProductId;
+  }
 }
+
+...
+//이렇게 사용 가능
+productRepository.nextId();
+...
 ```
 
 > DB 자동 증가 칼럼을 식별자로 사용하면 식별자 매핑에서 @GeneratedValue를 사용한다. 
