--- a/5 장 스프링 데이터 JPA를 이용한 조회 기능/5-2.md
+++ b/5 장 스프링 데이터 JPA를 이용한 조회 기능/5-2.md
@@ -19,6 +19,7 @@ public interface Specification<T> extends Serializable {
     Predicate toPredicate(Root<T> root, CriteriaQuery<?> query, CriteriaBuilder criteriaBuilder);
 }
 ```
+
 스펙에서 제네릭 타입 파라미터 T는 JPA 엔티티 타입을 의미한다. toPredicate()메서드는 JPA 크리테리아 API에서 조건을 표현하는 Predicate를 생성한다. 예를 들어 
 - 엔티티 타입이 OrderSummary다.
 - ordererId 프로펕 값이 지정한 값과 동일하다.
@@ -38,11 +39,109 @@ public class OrdererIdSpec implements Specification<OrderSummary> {
     return cb.equal(root.get(OrderSummary_.ordererId), ordererId);
   }
 }
+OrdererIdSpec 클래스는 Specification<OrderSummary> 타입을 구현하므로 OrderSummary에 대한 검색 조건을 표현한다.toPredicate() 메서드를 구현한 코드는 "ordererId"프로퍼티 값이 생성자로 전달 받은 ordererId와 동일 한지 비교하는 Predicate를 생성한다. 
 ```
-OrdererIdSpec 클래스는 Specification<OrderSummary> 타입을 구현하므로 OrderSummary에 대한 검색 조건을 표현한다. toPredicate() 메서드를 구현한 코드는 "ordererId"프로퍼티 값이 생성자
-로 전달 받은 ordererId와 동일 한지 비교하는 Predicate를 생성한다. 
 <br> 
-스펙 구현클래
+
+스펙 구현클래스를 개별적으로 만들지 않고 별도 클래스에 스팩 생성 기능을 모아도 된다. 
+```java
+public class OrderSummarySpecs {
+    public static Specification<OrderSummary> ordererId(String ordererId) {
+        return (Root<OrderSummary> root, CriteriaQuery<?> query, CriteriaBuilder cb) ->
+                cb.equal(root.<String>get("ordererId"), ordererId);
+    }
+
+    public static Specification<OrderSummary> orderDateBetween(
+            LocalDateTime from, LocalDateTime to) {
+        return (Root<OrderSummary> root, CriteriaQuery<?> query, CriteriaBuilder cb) ->
+                cb.between(root.get(OrderSummary_.orderDate), from, to);
+    }
+}
+```
+스펙은 함수형 인터페이스 이므로 람다식을 이용해서 객체를 생성할 수 있다. 스펙 생성이 필요한 코드는 스펙 생성 기능을 제공하는 클래스를 이용해서 좀 더 간결하게 스펙을 생성할 수 있다.
+
+```java
+Specification<OrderSummary> betweenSpec = OrderSummarySpecs.orderDateBetween(from, to);
+```
+
+# 리포지터리/DAO에서 스펙 사용하기 
+스펙을 충족하는 엔티티를 검색하고 싶다면 findAll() 메서드를 사용하면 된다. findAll() 메서드는 스펙 인터페이스를 파라미터로 갖는다. 
+
+```java
+public interface OrderSummaryDao extends Repository<OrderSummary, String>{
+    List<OrderSummary> findAll(Specification<OrderSummary> spec);
+}
+```
+findAll() 메서드는 OrderSummary에대한 검색 조건을 표현하는 스펙을 파라미터로 갖는다. 이 메서드와 앞서 작성한 스펙 구현체를 사용하면 특정 조건을 충족하는 엔티티를 검색할 수 있다.
+```java
+//스펙 객체 생성
+Specification<OrderSummary> spec = new OrdererIdSpec("userId");
+//findAll() 메서드를 이용한 검색
+List<OrderSummary> results = orderSummaryDao.findAll(spec);
+```
+
+# 스펙 조합
+스프링 데이터 JPA가 제공하는 스펙은 조합할 수 있는 두메서드를 제공하고 있다. 
+
+## and, or, not, where 스펙 제공 메서드
+
+```java 
+public interface Sepcification<T> extends Serializable {
+    ...
+    
+    default Specification<T> and(@Nullable Specification<T> other) {....}
+    default Specification<T> or(@Nullable Specification<T> other) {....}
+    
+    ...
+}
+```
+and()와 or() 메서드는 기본 구현을 가진 디폴트 메서드이다. and() 메서드는 두 스펙을 모두 충족하는 조건을 표현하는 스펙을 생성하고 or() 메서드는 두 스펙 중 하나 이상 충족하는 조건을 표현하는 스펙을
+생성한다. 
+
+```java
+Specification<OrderSummary> spec1 = OrderSummarySpec.orderId("userId");
+Specification<OrderSummary> spec2 = OrderSummarySpec.orderDateBetween(LocalDateTime.of(2022,1,1,0,0,0),LocalDateTime.of(2022,1,2,0,0,0));
+Specification<OrderSummary> spec3 = spec1.and(spec2);
+// 두 조건을 만족하는 표현하는 스펙 생성
+```
+개별 스펙 조건마다 변수를 선언 하지 않아도 된다.
+```java
+Specification<OrderSummary> spec = OrderSummary.ordererId("userId").and(OrderSummary.OrderDateBetween(from,to));
+```
+
+not 메서드는 정적 메서드로 조건을 반대로 적용할 때 사용한다.
+```java
+Specification<OrderSummary> spec1 = Specification.not(OrderSummarySpec.orderId("userId"));
+```
+null 가능성이 있는 스펙 객체와 다른 스펙을 조합해야 할 때가 있다. 이 경우 다음 코드처럼 null여부를 판단해서 NullPointException을 방지하는데 null 여부를 매번 검사하기엔 귀찮다. 
+
+```java
+Specification<OrderSummary> nullableSpec = createNullableSpec(); // null일수 있음.
+Specification<OrderSummary> otherSpec = createOtherSpec();
+
+Sepcification<OrderSummary> spec = nullableSpec == null ? otherSpec : nullableSpec.and(otherSpec);
+
+//벌써 귀찮고 길다.
+```
+
+where() 메서드를 사용하면 이런 귀찮음을 줄일 수 있다. where() 메서드는 스펙의 정적 메서드로 null을 전달하면 아무 조건도 생성하지 않는 스펙 객체를 리턴하고 null이 아니면 인자로 받은 스펙 객체를 그대로 리턴한다.(마치 QueryDsl의 BooleanExpression 과 닮은거 같다.)
+<br>
+이렇게 where를 사용하면 간단하게 변경할 수 있다. 
+```java
+Specification<OrderSummary> spec = Specification.where(createNullableSpec()).and(createOtherSpec());
+```
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
