--- a/5 장 스프링 데이터 JPA를 이용한 조회 기능/5-2.md
+++ b/5 장 스프링 데이터 JPA를 이용한 조회 기능/5-2.md
@@ -41,6 +41,7 @@ public class OrdererIdSpec implements Specification<OrderSummary> {
 }
 OrdererIdSpec 클래스는 Specification<OrderSummary> 타입을 구현하므로 OrderSummary에 대한 검색 조건을 표현한다.toPredicate() 메서드를 구현한 코드는 "ordererId"프로퍼티 값이 생성자로 전달 받은 ordererId와 동일 한지 비교하는 Predicate를 생성한다. 
 ```
+> OrderSummary_ 클래스는 책에서 참고하길 바람!
 <br> 
 
 스펙 구현클래스를 개별적으로 만들지 않고 별도 클래스에 스팩 생성 기능을 모아도 된다. 
