--- a/5 장 스프링 데이터 JPA를 이용한 조회 기능/5-2.md
+++ b/5 장 스프링 데이터 JPA를 이용한 조회 기능/5-2.md
@@ -127,7 +127,7 @@ Sepcification<OrderSummary> spec = nullableSpec == null ? otherSpec : nullableSp
 
 where() 메서드를 사용하면 이런 귀찮음을 줄일 수 있다. where() 메서드는 스펙의 정적 메서드로 null을 전달하면 아무 조건도 생성하지 않는 스펙 객체를 리턴하고 null이 아니면 인자로 받은 스펙 객체를 그대로 리턴한다.(마치 QueryDsl의 BooleanExpression 과 닮은거 같다.)
 <br>
-이렇게 where를 사용하면 간단하게 변경할 수 있다. 
+이렇게 where를 사용하면 간단하게 변경할 수 있다
 ```java
 Specification<OrderSummary> spec = Specification.where(createNullableSpec()).and(createOtherSpec());
 ```
